[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://scripts/ui/config/config_manager.gd" id="1_cpw8v"]
[ext_resource type="PackedScene" path="res://scenes/ui/common/navigation_bar.tscn" id="2_n8g7u"]
[ext_resource type="PackedScene" path="res://scenes/ui/config/organization_tab.tscn" id="3_jk4tp"]
[ext_resource type="PackedScene" path="res://scenes/ui/config/sites_tab.tscn" id="4_p27ys"]
[ext_resource type="PackedScene" path="res://scenes/ui/config/employees_tab.tscn" id="5_k81cv"]
[ext_resource type="PackedScene" path="res://scenes/ui/config/shift_patterns_tab.tscn" id="6_bk2md"]
[ext_resource type="PackedScene" path="res://scenes/ui/config/overtime_tab.tscn" id="7_c83em"]
[ext_resource type="PackedScene" path="res://scenes/ui/config/shift_offerings_tab.tscn" id="8_yxwoa"]
[ext_resource type="PackedScene" path="res://scenes/ui/config/classifications_tab.tscn" id="9_urhj2"]
[ext_resource type="PackedScene" path="res://scenes/ui/config/pay_periods_tab.tscn" id="10_vq8fm"]

[node name="ConfigManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cpw8v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NavigationBar" parent="VBoxContainer" instance=ExtResource("2_n8g7u")]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OrganizationTab" parent="VBoxContainer/TabContainer" instance=ExtResource("3_jk4tp")]
layout_mode = 2

[node name="SitesTab" parent="VBoxContainer/TabContainer" instance=ExtResource("4_p27ys")]
visible = false
layout_mode = 2

[node name="EmployeesTab" parent="VBoxContainer/TabContainer" instance=ExtResource("5_k81cv")]
visible = false
layout_mode = 2

[node name="ShiftPatternsTab" parent="VBoxContainer/TabContainer" instance=ExtResource("6_bk2md")]
visible = false
layout_mode = 2

[node name="OvertimeTab" parent="VBoxContainer/TabContainer" instance=ExtResource("7_c83em")]
visible = false
layout_mode = 2

[node name="ShiftOfferingsTab" parent="VBoxContainer/TabContainer" instance=ExtResource("8_yxwoa")]
visible = false
layout_mode = 2

[node name="ClassificationsTab" parent="VBoxContainer/TabContainer" instance=ExtResource("9_urhj2")]
visible = false
layout_mode = 2

[node name="PayPeriodsTab" parent="VBoxContainer/TabContainer" instance=ExtResource("10_vq8fm")]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ExportButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Export Configuration"

[node name="ImportButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Import Configuration"

[node name="StatusBar" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="StatusLabel" type="Label" parent="VBoxContainer/StatusBar"]
layout_mode = 2
text = "Ready."